```mermaid
classDiagram
    direction LR
    
    %% Interface
    class List~T~ {
        <<interface>>
        +boolean empty()
        +boolean last()
        +void findFirst()
        +void findNext()
        +T retrieve()
        +void update(T e)
        +void insert(T e)
        +void remove()
    }

    %% Phase I Data Structure Classes
    class Node~T~ {
        +T data
        +Node~T~ next
        +Node(T data)
    }

    class LinkedList~T~ {
        -Node~T~ head
        -Node~T~ current
        +LinkedList()
        +boolean empty()
        +boolean last()
        +void findFirst()
        +void findNext()
        +T retrieve()
        +void update(T e)
        +void insert(T e)
        +void remove()
        +Node~T~ getHead()
    }

    %% Phase II: AVL Tree Data Structure Classes
    class AVLNode~K,V~ {
        +K key
        +V data
        +AVLNode~K,V~ left
        +AVLNode~K,V~ right
        +int height
        +AVLNode(K key, V data)
    }

    class AVLTree~K,V~ {
        -AVLNode~K,V~ root
        -int size
        +AVLTree()
        -int height(AVLNode)
        -int getBalance(AVLNode)
        -void updateHeight(AVLNode)
        -AVLNode rightRotate(AVLNode)
        -AVLNode leftRotate(AVLNode)
        +void insert(K key, V data)
        +V search(K key)
        +boolean contains(K key)
        +void delete(K key)
        +LinkedList~V~ inOrderTraversal()
        +LinkedList~V~ reverseInOrderTraversal()
        +LinkedList~V~ rangeQuery(K min, K max)
        +V getMin()
        +V getMax()
        +boolean isEmpty()
        +int size()
        +boolean update(K key, V data)
    }

    %% Business Logic Classes - Phase II with AVL Trees
    class Customer {
        +int customerId
        +String name
        +String email
        +AVLTree~String,Customer~ customerTreeByName$
        +AVLTree~Integer,Customer~ customerTreeById$
        +LinkedList~Customer~ customers$
        +Customer(int, String, String)
        +String toString()
        +boolean addCustomer(Customer)$
        +Customer searchById(int)$
        +Customer searchByIdLinear(int)$
        +Customer searchByName(String)$
        +void printAll()$
        +void printAllSortedAlphabetically()$
        +void updateCustomer(int, String, String)$
        +void placeOrder(int, int, int, String)$
        +void viewOrderHistory(int)$
        +void addReviewToProduct(int, int, double, String)$
        +void printCustomerReviews(int)$
        +LinkedList~Customer~ getAllCustomersSortedAlphabetically()$
        +int getCustomerCount()$
    }

    class Product {
        +int productId
        +String name
        +double price
        +int stock
        +LinkedList~Review~ reviews
        +AVLTree~Integer,Product~ productTree$
        +AVLTree~Double,LinkedList~ productTreeByPrice$
        +AVLTree~Integer,LinkedList~ productTreeByReviewCount$
        +LinkedList~Product~ products$
        +Product(int, String, double, int)
        +void addReview(Review)
        +double getAverageRating()
        +int getReviewCount()
        +String toString()
        +boolean addProduct(Product)$
        +Product searchById(int)$
        +Product searchByIdLinear(int)$
        +Product searchByName(String)$
        +void updateProduct(int, double, int)$
        +void removeProduct(int)$
        +void printAll()$
        +void printOutOfStock()$
        +void topThreeProducts()$
        +void topThreeMostReviewedProducts()$
        +void updateProductReviewCount(int, int, int)$
        +LinkedList~Product~ getProductsInPriceRange(double, double)$
        +void printProductsInPriceRange(double, double)$
        +LinkedList~Product~ getAllProductsSorted()$
        +int getProductCount()$
    }

    class Order {
        +int orderId
        +Customer customer
        +LinkedList~Product~ products
        +double totalPrice
        +String orderDate
        +String status
        +AVLTree~Integer,Order~ orderTree$
        +AVLTree~String,LinkedList~ orderTreeByDate$
        +LinkedList~Order~ orders$
        +int maxOrderId$
        +Order(int, Customer, LinkedList~Product~, double, String, String)
        +String toString()
        +int getNextOrderId()$
        +void addOrder(Order)$
        +void printAll()$
        +void printOrdersBetween(String, String)$ %%delegates to getOrdersBetweenDates
        +Order searchById(int)$
        +Order searchByIdLinear(int)$
        +void updateOrderStatus(int, String)$
        +void cancelOrder(int)$
        +LinkedList~Order~ getOrdersByCustomer(int)$
        +LinkedList~Order~ getOrdersBetweenDates(String, String)$
        +LinkedList~Order~ getAllOrdersSorted()$
        +int getOrderCount()$
    }

    note for Order "printOrdersBetween() delegates to\ngetOrdersBetweenDates() to avoid\ncode duplication (DRY principle)"

    class Review {
        +int reviewId
        +Product product
        +Customer customer
        +String comment
        +double rating
        +AVLTree~Integer,Review~ reviewTree$
        +AVLTree~Integer,LinkedList~ reviewTreeByProductId$
        +LinkedList~Review~ allReviews$
        +int maxReviewId$
        +Review(int, Product, Customer, String, double)
        +String toString()
        +int getNextReviewId()$
        +void addReview(Review)$
        +Review searchById(int)$
        +void editReview(int, double, String)$
        +LinkedList~Review~ getReviewsByCustomer(int)$
        +LinkedList~Product~ getCommonHighRatedProducts(int, int)$
        +void printAll()$
        +void printCustomersWhoReviewedProduct(int)$
        +int getReviewCount()$
    }

    %% Implementation Relationships
    List~T~ <|.. LinkedList~T~ : implements
    LinkedList~T~ o-- Node~T~ : contains
    AVLTree~K,V~ o-- AVLNode~K,V~ : contains
    
    %% Business Logic Relationships with Cardinality
    Customer "1" -- "0..*" Order : places
    Order "1..*" -- "1..*" Product : contains
    Product "1" -- "0..*" Review : receives
    Customer "1" -- "0..*" Review : writes
    Review "*" --> "1" Customer : written by
    Review "*" --> "1" Product : about
    
    %% Phase II: AVL Tree Collection Relationships
    Customer o-- "1" AVLTree~Integer,Customer~ : stores by ID
    Customer o-- "1" AVLTree~String,Customer~ : stores by Name
    Product o-- "1" AVLTree~Integer,Product~ : stores by ID
    Product o-- "1" AVLTree~Double,LinkedList~ : stores by Price
    Product o-- "1" AVLTree~Integer,LinkedList~ : stores by Review Count
    Product o-- "1" LinkedList~Review~ : has reviews
    Order o-- "1" AVLTree~Integer,Order~ : stores by ID
    Order o-- "1" AVLTree~String,LinkedList~ : stores by Date
    Order o-- "1" LinkedList~Product~ : contains products
    Review o-- "1" AVLTree~Integer,Review~ : stores by ID
    Review o-- "1" AVLTree~Integer,LinkedList~ : stores by ProductId
```